--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,10 @@
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
-upload_port = COM6
+upload_port = COM9
 monitor_speed = 115200
 lib_ldf_mode = deep
 lib_deps =
     ; WROVER KIT LCD
-    ; ADAFRUIT GFX Library
+    ADAFRUIT GFX Library
     ; Wire
